[package]
name = "tft-spi-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clonable = "0.9"
#itertools = "0.12"
#spidev = "0.5"
#gpio = "0.4"
#gpiod = "0.2"
#tokio-gpiod = "0.2"
rppal = "0.16"
